--- a/app/src/main/res/layout/user_profile_screen_post_adapter.xml
+++ b/app/src/main/res/layout/user_profile_screen_post_adapter.xml
@@ -41,15 +41,70 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/postImage"
+        android:id="@+id/postImage1"
         android:layout_width="match_parent"
         android:layout_height="360dp"
         android:layout_marginTop="20dp"
         android:scaleType="fitXY"
         android:src="@mipmap/breadcrumbs_app_icon_round"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/feedPostUserProfilePicture" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/adapter_imageParentLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/feedPostUserProfilePicture">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/postImage"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                android:scaleType="fitXY"
+                android:src="@mipmap/breadcrumbs_app_icon_round" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/poiNameBar"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_gravity="bottom"
+                android:background="@drawable/image_label_bg"
+                android:orientation="horizontal">
+
+                <com.mikhaellopez.circularimageview.CircularImageView
+                    android:id="@+id/feed_post_banner_trail_image"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:src="@drawable/breadcrumbs_trail"
+                    app:civ_border_width="0dp" />
+
+                <TextView
+                    android:id="@+id/feed_post_banner_trail_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="5dp"
+                    android:fontFamily="@font/claritycity_bold"
+                    android:text="PIONEER TRAIL"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+        </FrameLayout>
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
     <ImageView
         android:id="@+id/user_profile_screen_post_adapter_like_button"
@@ -59,7 +114,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/feed_screen_unlike_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postImage" />
+        app:layout_constraintTop_toBottomOf="@+id/adapter_imageParentLayout" />
 
     <TextView
         android:id="@+id/likeCount"
@@ -82,7 +137,7 @@
         android:layout_marginEnd="20dp"
         android:src="@drawable/feed_screen_share_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postImage" />
+        app:layout_constraintTop_toBottomOf="@+id/adapter_imageParentLayout" />
 
     <TextView
         android:id="@+id/shareText"
