--- a/app/src/main/res/layout/about_trail.xml
+++ b/app/src/main/res/layout/about_trail.xml
@@ -39,6 +39,7 @@
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/about_trail_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="33dp"
