--- a/app/src/main/res/layout/ar_challenge_layout.xml
+++ b/app/src/main/res/layout/ar_challenge_layout.xml
@@ -6,15 +6,31 @@
     android:background="#ACC9B8">
 
 
-    <ImageView
-        android:id="@+id/arChallengeImageView"
-        android:layout_width="match_parent"
-        android:layout_height="205dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/quiz_challenge_bg"
+
+    <FrameLayout
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/imageFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/arChallengeImageView"
+            android:layout_width="match_parent"
+            android:layout_height="205dp"
+            android:scaleType="centerCrop"
+             />
+        <ProgressBar
+            android:id="@+id/ar_challenge_screen_loader"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+    </FrameLayout>
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -23,7 +39,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/arChallengeImageView">
+        app:layout_constraintTop_toBottomOf="@+id/imageFrameLayout">
 
 
         <TextView
@@ -174,7 +190,7 @@
                 android:textSize="14sp" />
 
             <TextView
-                android:id="@+id/selfieDiscoveryMark"
+                android:id="@+id/arDiscoveryMark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -223,6 +239,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
+
             android:background="@drawable/close_button"
             android:fontFamily="@font/claritycity_bold"
             android:paddingStart="80dp"
