--- a/app/src/main/res/layout/available_trails_layout.xml
+++ b/app/src/main/res/layout/available_trails_layout.xml
@@ -63,7 +63,7 @@
         app:layout_constraintTop_toBottomOf="@id/view1">
 
         <ImageView
-            android:id="@+id/image1"
+            android:id="@+id/trail_one_image_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_alignParentStart="true"
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:layout_toEndOf="@+id/image1"
+            android:layout_toEndOf="@+id/trail_one_image_iv"
             android:fontFamily="@font/claritycity_semibold"
             android:text="Wild About Twilight"
             android:textColor="@color/black"
@@ -108,7 +108,7 @@
         app:layout_constraintTop_toBottomOf="@id/row1">
 
         <ImageView
-            android:id="@+id/image2"
+            android:id="@+id/trail_two_image_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/anthology_trail_icon"
@@ -122,7 +122,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_toEndOf="@+id/image2"
+            android:layout_toEndOf="@+id/trail_two_image_iv"
             android:fontFamily="@font/claritycity_semibold"
             android:text="Hanse &amp; Grey's Adventure"
             android:textColor="@color/black"
@@ -130,7 +130,7 @@
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/hanse_trail_radio_button"
-            app:layout_constraintStart_toEndOf="@+id/image2"
+            app:layout_constraintStart_toEndOf="@+id/trail_two_image_iv"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
