--- a/app/src/main/res/layout/creator_post_layout.xml
+++ b/app/src/main/res/layout/creator_post_layout.xml
@@ -24,20 +24,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <com.mikhaellopez.circularimageview.CircularImageView
             android:id="@+id/creator_icon_iv"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:src="@drawable/breadcrumbs_trail"
             app:layout_constraintEnd_toEndOf="parent"
-
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/creator_title_tv"
             android:layout_width="0dp"
+            android:layout_marginTop="10dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/claritycity_bold"
             android:gravity="center_horizontal"
