--- a/app/src/main/res/layout/trail_details_layout.xml
+++ b/app/src/main/res/layout/trail_details_layout.xml
@@ -187,7 +187,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/claritycity_bold"
-                        android:text="2/17 POIs DISCOVERED"
+                        android:text="0/0 POIs DISCOVERED"
                         android:textColor="#4B3B30"
                         android:textSize="@dimen/discovery_screen_player_name_text_size" />
 
@@ -202,7 +202,8 @@
 
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:gravity="center"
                         android:weightSum="3"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -214,9 +215,6 @@
                             android:id="@+id/iv_trail_details_creator_post"
                             android:layout_width="45dp"
                             android:layout_height="45dp"
-                            android:layout_gravity="left"
-
-
                             app:civ_border_width="0dp"
                           />
                         <TextView
@@ -243,17 +241,15 @@
                     </LinearLayout>
 
                     <View
-
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-
                         android:background="#A5988B" />
 
                     <LinearLayout
-
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_margin="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
                         android:weightSum="3"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -261,7 +257,6 @@
                         app:layout_constraintTop_toTopOf="parent">
 
                         <ImageView
-
                             android:layout_width="45dp"
                             android:layout_height="45dp"
                             android:src="@drawable/leaderboard_screen_logo" />
