--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -5,8 +5,8 @@
         <item name="android:windowBackground">@drawable/splash_screen_new</item>
 
         <item name="android:windowNoTitle">true</item>
-        <item name="android:windowFullscreen">false</item>
- <!--       <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>-->
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowLayoutInDisplayCutoutMode">shortEdges</item>
         <item name="android:windowTranslucentStatus">true</item>
 
     </style>
