--- a/app/src/main/res/layout/profile_screen_friend.xml
+++ b/app/src/main/res/layout/profile_screen_friend.xml
@@ -301,7 +301,7 @@
                                     android:paddingTop="2dp"
                                     android:paddingEnd="15dp"
                                     android:paddingBottom="2dp"
-                                    android:text="328"
+                                    android:text="0"
                                     android:textColor="#4B3B30"
                                     android:textSize="@dimen/discover_screen_poi_distance_text_size"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -356,7 +356,7 @@
                                     android:paddingTop="2dp"
                                     android:paddingEnd="15dp"
                                     android:paddingBottom="2dp"
-                                    android:text="328"
+                                    android:text="0"
                                     android:textColor="#4B3B30"
                                     android:textSize="@dimen/discover_screen_poi_distance_text_size"
                                     app:layout_constraintBottom_toBottomOf="parent"
@@ -442,7 +442,7 @@
                         android:fontFamily="@font/claritycity_bold"
                         android:layout_marginTop="10dp"
                         android:gravity="center_horizontal"
-                        android:text="No Post Available"
+                        android:text="No data found"
                         android:textColor="#4B3B30"
                         android:textSize="@dimen/trail_list_item_size"
                         app:layout_constraintEnd_toEndOf="parent"
