--- a/app/src/main/res/layout/friend_posts_list_adapter.xml
+++ b/app/src/main/res/layout/friend_posts_list_adapter.xml
@@ -9,7 +9,7 @@
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:src="@mipmap/breadcrumbs_app_icon_round"
+        android:src="@drawable/com_facebook_profile_picture_blank_portrait"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +45,7 @@
         android:layout_height="360dp"
         android:layout_marginTop="20dp"
         android:scaleType="fitXY"
-        android:src="@mipmap/breadcrumbs_app_icon_round"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/feedPostUserProfilePicture" />
@@ -96,7 +96,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:fontFamily="@font/dinish_bold"
-        android:text="21 Likes"
+        android:text="0 Like"
         android:textColor="#4B3B30"
         android:textSize="@dimen/discovery_screen_player_name_text_size"
         app:layout_constraintBottom_toBottomOf="@+id/likeImageView"
