--- a/app/src/main/res/layout/friends_list_layout.xml
+++ b/app/src/main/res/layout/friends_list_layout.xml
@@ -105,7 +105,7 @@
             android:fontFamily="@font/claritycity_bold"
             android:textSize="@dimen/challenge_begin_screen_discovery_text_size"
             android:textColor="@color/white"
-            android:text="2"
+            android:text="0"
             android:gravity="center"
             app:layout_constraintTop_toTopOf="@+id/friendName" />
 
@@ -124,4 +124,17 @@
         tools:listitem="@layout/friend_list_adapter"
         app:layout_constraintTop_toBottomOf="@+id/new_request_layout"
         />
+    <TextView
+        android:id="@+id/friend_list_screen_no_data_found"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/claritycity_bold"
+        android:text="No data found"
+        android:textColor="#4B3B30"
+        android:visibility="gone"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
